--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -2,7 +2,7 @@
   <div class="home">
     <%- include('../components/logo') -%>
 
-    <h1 class="lsans main-logo sitetext">lunaar.</h1>
+    <h1 class="lsans main-logo sitetext">Merge.</h1>
     <p id="rng"></p>
     <form id="uv-form">
       <input
