--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -37,13 +37,13 @@
     </div>
   </div>
   <div class="footer footer-left" style="left: 10px; font-size: 20px">
-    <a href="https://github.com/Parcoil/lunaar.org"
+    <a href="https://github.com/adamsmith19899"
       ><i class="fa-brands fa-github"></i
     ></a>
-    <a href="htts://dsc.gg/parcoil"><i class="fa-brands fa-discord"></i></a>
+    <a href="htts://imgmerge.vercel.app"><i class="fa-brands fa-discord"></i></a>
   </div>
   <div class="footer">
-    <a id="version" href="https://github.com/parcoil/lunaar.org"
+    <a id="version" href="https://imgmerge.vercel.app"
       >Loading version</a
     >
   </div>
